--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake_hexagon"]
 	path = cmake_hexagon
-	url = https://github.com/ATLFlight/cmake_hexagon
+	url = https://github.com.cnpmjs.org/ATLFlight/cmake_hexagon
